# webkin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TreeElement.xaml.cs  requirements.txt  resources.txt  run.py
docs/: kinematic-tree-spec.md
scripts/: rotate_demo.py
server/: crow_listener.py  k3d_loader.py  kinematic.py  main.py
src/: crow_listener.cpp  crow_listener.hpp  k3d_loader.cpp  k3d_loader.hpp  kinematic.hpp  main.cpp  mqtt_listener.cpp  mqtt_listener.hpp
static/: app.js  example_tree.json  index.html  kinematic.js
